--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "JSONStream": "npm:@search-dump/jsonstream@^1.4.0",
+    "JSONStream": "^1.5.0",
     "async": "^2.6.4",
     "aws-sdk": "2.1472.0",
     "aws4": "^1.12.0",
@@ -42,7 +42,7 @@
     "lossless-json": "^1.0.5",
     "minimist": "^1.2.8",
     "p-queue": "^6.6.2",
-    "request": "npm:@cypress/request@^3.0.1",
+    "request": "^3.0.1",
     "requestretry": "^7.1.0",
     "s3-stream-upload": "2.0.2",
     "s3urls": "^1.5.2",
